# phpboy

./: .gitignore  ARCHITECTURE_REVIEW.md  Dockerfile  EM-BUILD-INSTRUCTIONS.md  Makefile  PLAN.md  README.md  STEP4_STATUS.md  analyze-colors.php  cgb-acid2-output.ppm  cgb-acid2-output.txt  cgb-test-summary.md  composer.json  docker-compose.yml  package.json  phpstan.neon  phpunit.xml  test-cgb-acid2.php
.claude/agents/: gameboy-emulator-performance-reviewer.md  gameboy-emulator-reviewer.md
.github/workflows/: test.yml
docs/: QUICK_WINS_ANALYSIS.md  ROM_CHECK_ANALYSIS.md  STATUS.md  STEP15_STATUS.md  WASM_OPTIMIZATION_SUMMARY.md  WASM_PERFORMANCE_REVIEW.md  browser-usage.md  cgb-acid2-analysis.md  cgb-dmg-colorization.md  configuration.md  em-migration.md  known-issues.md  optimizations.md  performance.md  phase1-optimizations-implemented.md  php-sdl2-compatibility-analysis.md  profiling-analysis.md  research.md  savestate-format.md  sdl2-implementation-guide.md  sdl2-quick-reference.md  sdl2-setup.md  sdl2-usage.md  step-16-implementation-status.md  tas-guide.md  test-results.md  wasm-build.md  wasm-options.md  wasm-performance-optimization.md  wasm-solutions-comparison.md  wasmer-browser-implementation.md
docs/optimizations/: IMMEDIATE_WINS.md  IMPLEMENTATION_NOTES.md  PART2_IMPLEMENTATION.md
docs/rust-hybrid-poc/: Cargo.toml  README.md
docs/rust-hybrid-poc/src/: bus.rs  cartridge.rs  cpu.rs  lib.rs  ppu.rs
src/: Emulator.php
src/Apu/: Apu.php  AudioSinkInterface.php
src/Bus/: BusInterface.php  MockBus.php  (+3 more)
web/: index.html  phpboy-wasm.php  styles.css
(+117 files in other folders)
