[package]
name = "phpboy-core"
version = "0.1.0"
edition = "2021"
authors = ["PHPBoy Contributors"]
license = "MIT"
description = "High-performance Game Boy emulator core in Rust compiled to WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3          # Maximum optimization
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization (slower compile)
panic = "abort"        # Smaller WASM size
strip = true           # Remove debug symbols

# Optimize for size (alternative profile)
[profile.release-size]
inherits = "release"
opt-level = "z"        # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true
